# simple-feed

./: README.md  db.slite3  db.sqlite3  docker-compose.test.yml  docker-compose.yaml  index.html  layout.html  manage.py  models.py  profile.html  render.yaml  render.yml  requirements.txt  urls.py
.github/workflows/: ci.yml
backend/: Dockerfile.test  README.md  conftest.py  manage.py  pytest.ini  requirements.txt
backend/ai/: centroids.py  engine.py  triage.py
capstone/: settings.py
django/: urls.py
docs/: backend.md  frontend.md  kernel.md
feed/: models.py  urls.py  util.py  views.py
feeds/: admin.py  util.py  views.py
frontend/: .eslintrc.cjs  README.md  frontend_src_App.tsx  frontend_src_components_common_Sidebar.tsx  frontend_src_components_workspace_ArticleReader.tsx  frontend_src_components_workspace_WorkspaceBoard.tsx  frontend_src_hooks_useFeed.ts  package.json
kernel/: CMakeLists.txt  README.md  client.py
kernel/proto/: feed.proto
kernel/source/: main.cc  server.h
kernel/source/core/: safe_buffer.h  type.h
kernel/source/education/: edu_scanner.cc
kernel/source/finance/: quant_math.cc
kernel/source/parser/: feed_parser.cc  feed_parser.h
kernel/source/planning/: plan_optimizer.cc
kernel/source/server/: server.cc
kernel/source/simd/: scanner.cc  scanner.h
kernel/tests/: CMakeLists.txt  test_avx_scanner.cc  test_buffer_safety.cc
kernel/tests/education/: test_scanner.cc
kernel/tests/finance/: test_quant.cc
kernel/tests/planning/: test_optimizer.cc
simple/: asgi.py  settings.py  urls.py
template/: index.html
(+118 files in other folders)
